REFACTORING GenerateAst from text files